# logheap

./: Cargo.toml  docker-compose.yml  infra_up.sh
api/: Cargo.toml
api/src/: main.rs
api/src/common/: mod.rs
api/src/database/: mod.rs
api/src/filters/: mod.rs
api/src/handlers/: issues.rs
shipper/: .gitignore  Cargo.toml
shipper/src/: main.rs
shipper/src/filters/: mod.rs
shipper/src/handlers/: ingest.rs
shipper/src/kafka/: mod.rs
vector/: Dockerfile  vector.toml
web/: .gitignore  pnpm-lock.yaml
web/app/dashboard/: page.tsx
web/config/: site.ts
