[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde_json = "1.0"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
clickhouse = "0.11.3"
rskafka = "0.3.0"